k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nossalista-dev
  namespace: nossalista-dev
spec:
  selector:
    app: nossalista-dev
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
