k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nossalista-dev
  namespace: nossalista-dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: nossalista.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nossalista-dev
                port:
                  number: 80
